# pdfplumber-rs

./: AGENT9_WARPLAN.md  CLAUDE.md  CREW.md  Cargo.toml  FINDINGS.md  WINTERSTRATEN.md  deny.toml
.github/workflows/: ci.yml
.wtr/marbles/pending/: 20260306T220000_a7_BUILD_REQUEST_L20.json
crates/pdfplumber/: CLAUDE.md  Cargo.toml  README.md
crates/pdfplumber-a11y/: Cargo.toml
crates/pdfplumber-a11y/src/: checkers.rs  lib.rs  rules.rs  tag_infer.rs
crates/pdfplumber-a11y/tests/: integration.rs
crates/pdfplumber-chunk/: Cargo.toml
crates/pdfplumber-chunk/src/: chunk.rs  chunker.rs  heading.rs  lib.rs  table_render.rs  token.rs
crates/pdfplumber-chunk/tests/: integration.rs
crates/pdfplumber-cli/: CLAUDE.md  Cargo.toml
crates/pdfplumber-cli/src/: annotate_cmd.rs  cli.rs  inspect_cmd.rs  main.rs  shared.rs  signatures_cmd.rs  validate_cmd.rs
crates/pdfplumber-cli/src/tui/: app.rs  config_persist.rs  event_loop.rs  events.rs  extraction.rs  input_handlers.rs  process_scan.rs  screen_config.rs  screen_extract.rs  screen_grep.rs  screen_menu.rs  screen_process.rs  theme.rs  widgets.rs
crates/pdfplumber-core/: CLAUDE.md  Cargo.toml  README.md
crates/pdfplumber-core/examples/: bbox_operations.rs
crates/pdfplumber-core/src/: annotation.rs  bidi.rs  dedupe.rs  edges.rs  encoding.rs  error.rs  forensic.rs  form_field.rs  geometry.rs  html.rs  images.rs  layout.rs  lib.rs  page_regions.rs  painting.rs  path.rs  search.rs  shapes.rs  signature.rs  struct_tree.rs  table.rs  text.rs  validation.rs  words.rs
crates/pdfplumber-core/src/encoding/: glyph_names.rs  mod.rs  tests.rs
crates/pdfplumber-core/src/error/: tests.rs
crates/pdfplumber-core/src/html/: tests.rs
crates/pdfplumber-core/src/images/: tests.rs
crates/pdfplumber-core/src/layout/: tests.rs
crates/pdfplumber-core/src/painting/: tests.rs
crates/pdfplumber-core/src/shapes/: tests.rs
crates/pdfplumber-core/src/svg/: tests.rs
crates/pdfplumber-core/src/table/: algorithms.rs  extraction.rs  mod.rs  tests.rs
crates/pdfplumber-core/src/words/: mod.rs
crates/pdfplumber-forensic/: Cargo.toml
crates/pdfplumber-forensic/src/: anomaly.rs  lib.rs  metadata.rs
crates/pdfplumber-layout/: CLAUDE.md  Cargo.toml  LANE6_STATUS.md  README.md
crates/pdfplumber-layout/examples/: extract_layout.rs  to_markdown.rs
crates/pdfplumber-layout/src/: block_classifier.rs  classifier.rs  document.rs  extractor.rs  figure_detector.rs  figures.rs  headings.rs  lib.rs  lists.rs  markdown.rs  paragraphs.rs  section_builder.rs  sections.rs
crates/pdfplumber-layout/tests/: integration.rs
crates/pdfplumber-math/: Cargo.toml
crates/pdfplumber-math/src/: detector.rs  latex.rs  lib.rs  symbols.rs  unicode_ranges.rs
crates/pdfplumber-mcp/: Cargo.toml  README.md
crates/pdfplumber-mcp/src/: lib.rs  main.rs  progress.rs  prompts.rs  resources.rs  tools.rs  types.rs
crates/pdfplumber-parse/: CLAUDE.md  Cargo.toml  README.md
crates/pdfplumber-parse/examples/: tokenize_stream.rs
crates/pdfplumber-parse/src/: adobe_cns1_ucs2.rs  adobe_gb1_ucs2.rs  adobe_japan1_ucs2.rs  adobe_korea1_ucs2.rs  backend.rs  cff.rs  char_extraction.rs  cid_font.rs  cjk_encoding.rs  cmap.rs  color_space.rs  error.rs  font_metrics.rs  handler.rs  interpreter.rs  lib.rs  lopdf_backend.rs  standard_fonts.rs  text_renderer.rs  text_state.rs  tokenizer.rs  truetype.rs
crates/pdfplumber-parse/src/cff/: mod.rs  tests.rs
crates/pdfplumber-parse/src/cid_font/: tests.rs
crates/pdfplumber-parse/src/cmap/: tests.rs
crates/pdfplumber-parse/src/interpreter/: events.rs  font.rs  mod.rs  tests.rs  text.rs  xobjects.rs
crates/pdfplumber-parse/src/lopdf_backend/: tests.rs
crates/pdfplumber-parse/src/text_renderer/: mod.rs  tests.rs
crates/pdfplumber-parse/src/text_state/: mod.rs  tests.rs
crates/pdfplumber-parse/src/tokenizer/: mod.rs  parse.rs
crates/pdfplumber-parse/tests/: unrecognized_operator_recovery.rs
crates/pdfplumber-py/: CLAUDE.md  Cargo.toml
crates/pdfplumber-py/src/: lib.rs
crates/pdfplumber-py/tests/: conftest.py  test_basic.py
crates/pdfplumber-raster/: Cargo.toml
crates/pdfplumber-raster/src/: color.rs  font_cache.rs  lib.rs  render.rs
crates/pdfplumber-raster/tests/: integration.rs
crates/pdfplumber-wasm/: CLAUDE.md  Cargo.toml  package.json  pdfplumber-wasm.d.ts
crates/pdfplumber-wasm/examples/: browser-demo.html
crates/pdfplumber-wasm/src/: lib.rs
crates/pdfplumber/src/: lib.rs  ollama.rs  page.rs  pdf.rs  signatures.rs  write.rs
crates/pdfplumber/src/page/: helpers.rs  mod.rs  tests.rs
crates/pdfplumber/src/pdf/: helpers.rs
crates/pdfplumber/tests/: accuracy_benchmark.rs  all_fixtures_integration.rs  cross_validation.rs  fixture_integration.rs  issue_1054_robustness.rs  issue_1181_and_848_robustness.rs  issue_848_accuracy.rs  pdf_integration.rs  real_world_integration.rs  rotation_integration.rs  rotation_table_integration.rs
scripts/ralph/: .last-branch  prd.json  progress.txt
