[workspace]
members = [
    "crates/pdfplumber-core",
    "crates/pdfplumber-parse",
    "crates/pdfplumber",
    "crates/pdfplumber-cli",
    "crates/pdfplumber-py",
    "crates/pdfplumber-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/developer0hye/pdfplumber-rs"
