[package]
name = "pdfplumber-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool to extract text, characters, words, and tables from PDF documents"
keywords = ["pdf", "cli", "table", "text-extraction"]
categories = ["command-line-utilities"]

[[bin]]
name = "pdfplumber"
path = "src/main.rs"

[features]
write = ["pdfplumber/write"]

[dependencies]
pdfplumber = { version = "0.2.0", path = "../pdfplumber" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
lopdf = "0.36"
tempfile = "3"
serde_json = "1.0"
