[package]
name = "pdfplumber-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data types and algorithms for pdfplumber-rs (backend-independent)"
keywords = ["pdf", "table", "text-extraction", "pdfplumber"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
unicode-bidi = "0.3"
unicode-normalization = "0.1"

[dev-dependencies]
serde_json = "1.0"
