[package]
name = "pdfplumber-py"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for pdfplumber-rs via PyO3"
keywords = ["pdf", "python", "pyo3", "pdfplumber", "text-extraction"]
categories = ["api-bindings", "parser-implementations"]
readme = "README.md"
publish = false

[lib]
name = "pdfplumber"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { version = "0.24" }
pdfplumber = { path = "../pdfplumber" }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
lopdf = "0.34"
pyo3 = { version = "0.24", features = ["auto-initialize"] }
