[package]
name = "pdfplumber-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly/JavaScript bindings for pdfplumber-rs PDF extraction"
keywords = ["pdf", "wasm", "webassembly", "pdfplumber", "table-extraction"]
categories = ["wasm", "parser-implementations"]
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
pdfplumber = { path = "../pdfplumber", default-features = false, features = ["serde"] }

[dev-dependencies]
lopdf = "0.34"
wasm-bindgen-test = "0.3"
